because of the differences in versions Java 8 and 11 had to use Arrays.toList in the advice and LineItems in the arrrayList